added style changes

--- a/style/style.css
+++ b/style/style.css
@@ -13,14 +13,20 @@
     font-size: 60px;
     font-weight: 800;
     text-align: center;
+    padding-top: 27px;
 }
 h2{
     text-align: center;
-    padding-bottom: 150px;margin: 0%;
+    padding-bottom: 30px;
+    margin: 0%;
     padding-top: 0;
     color:#cf3a43;
-
+    border-bottom: 0.5px solid #ccc;
 }
+h4{
+    padding-top: 30px;
+}
+/*  */
 #main-title{
     font-size: 42px;
     line-height: 3.3rem;
@@ -44,7 +50,7 @@ font-size: large;
 
  
 .overview-stats p{
-    padding:0 10px;
+    /* padding:0 10px; */
 }
 
 .picture-portion img{
@@ -88,6 +94,7 @@ article {
 .covid-img{
 box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 padding-right: 5px;
+margin-top: 7%;
 }
 header{
     background-color: #000000;
@@ -155,6 +162,9 @@ header{
     transition: box-shadow 0.4s;
 
 }
+.head{
+    background:#0a192f;
+}
 
 #overall-cases:hover, #overall-active-cases:hover, form:hover{
     box-shadow: 0 4px 8px rgba(255, 255, 255, 0.712);
@@ -197,6 +207,7 @@ a {
 .covid-img img{
     height: 70%;
     /* visibility: hidden; */
+    padding: 15% 0;
 }
 
 main {
@@ -257,6 +268,8 @@ body, ol, p, pre, ul {
     font-size: 40px;
 }
 
+
+
 @media (max-width: 986px) {
 #Fact2, #Fact3, .fact3-text, .typewrite{
     font-size: 20px;
@@ -273,7 +286,7 @@ body, ol, p, pre, ul {
     main{
         border-bottom: none;
     }
-.container{
+    .container{
     flex-direction: column;
     /* margin: 50px 50px; */
     }
@@ -340,6 +353,8 @@ body, ol, p, pre, ul {
     h2{
         font-size: 13px;
         padding:   5px 20px;
+        padding-bottom: 30px;
+
     }
 
     footer p{
