--- a/style/style.css
+++ b/style/style.css
@@ -96,9 +96,10 @@ box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255,
 padding-right: 5px;
 margin-top: 7%;
 }
-header{
-    background-color: #000000;
 
+
+.main-overview{
+    background: #000000;
 }
 #home{
     padding-bottom: 140px;
